[gd_scene load_steps=32 format=3 uid="uid://bn22r1qaycqkx"]

[ext_resource type="Texture2D" uid="uid://c8arnlq67qi7" path="res://assets/textures/grids/Dark/texture_05.png" id="1_20tk5"]
[ext_resource type="Texture2D" uid="uid://b58xv1joypxo5" path="res://assets/textures/grids/Orange/texture_09.png" id="2_4g7fi"]
[ext_resource type="Texture2D" uid="uid://cb6jn5q5c4fgk" path="res://assets/shader/Daylight-Box-UV-psx-1.png" id="2_olrgw"]
[ext_resource type="Script" path="res://scripts/World_scripts/game_manager.gd" id="2_qftlj"]
[ext_resource type="Texture2D" uid="uid://djg8y25y06h5n" path="res://assets/textures/grids/Green/texture_09.png" id="3_5yguv"]
[ext_resource type="Texture2D" uid="uid://hu5rfl6qr2nv" path="res://assets/textures/grids/Red/texture_09.png" id="4_bbcvw"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3d.gd" id="6_m5yp5"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="8_0iifm"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/camera_3d_resource.gd" id="8_huh2v"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="9_5lj70"]
[ext_resource type="Script" path="res://scripts/World_scripts/area_3d.gd" id="10_3ba0x"]
[ext_resource type="Shader" path="res://assets/shader/psx-post.gdshader" id="11_ojjgn"]
[ext_resource type="PackedScene" uid="uid://ct4djq7gy118w" path="res://scenes/Player_scenes/player.tscn" id="12_7522c"]
[ext_resource type="PackedScene" uid="uid://bwlf6mht7tj31" path="res://scenes/Victim_scenes/victim.tscn" id="13_dyovg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yeixw"]
shader = ExtResource("11_ojjgn")
shader_parameter/enabled = true
shader_parameter/dithering = true
shader_parameter/colors = 16
shader_parameter/dither_size = 1

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_otqnr"]
panorama = ExtResource("2_olrgw")
filter = false

[sub_resource type="Sky" id="Sky_w8b7c"]
sky_material = SubResource("PanoramaSkyMaterial_otqnr")

[sub_resource type="Environment" id="Environment_at28d"]
background_mode = 2
background_color = Color(0.231599, 7.12335e-05, 0.811067, 1)
sky = SubResource("Sky_w8b7c")
ambient_light_source = 2
ambient_light_color = Color(0.892469, 0.878271, 0.878528, 1)
tonemap_mode = 2
sdfgi_enabled = true
glow_enabled = true
fog_light_color = Color(0, 0, 0, 1)
fog_density = 0.001

[sub_resource type="NavigationMesh" id="NavigationMesh_cx1re"]
vertices = PackedVector3Array(-8.75, 0.5, -24, -7.75, 0.5, -24.25, -7.75, 0.5, -499.5, -499.5, 0.5, -499.5, -499.5, 0.5, -22.75, -8.75, 0.5, -22.5, -6.5, 0.5, -24, -6.5, 0.5, -22, 7, 0.5, -22, 7, 0.5, -24.75, 8.25, 0.5, -25, 8.25, 0.5, -499.5, 9.25, 0.5, -24.75, 499.5, 0.5, -23.5, 499.5, 0.5, -499.5, 9.25, 0.5, -23.25, 8.25, 10.25, -11.5, 8.25, 10.25, -24, 8, 10.25, -12, 2.25, 10.25, -11.75, 9.25, 0.5, -12.25, 499.5, 0.5, -12, -7.75, 10.5, -11.5, -1.75, 10.5, -11.5, -7.5, 10.5, -12, -7.75, 10.5, -23.25, -499.5, 0.5, -12, -8.75, 0.5, -12.25, -0.75, 0.5, -11.75, 1.25, 0.5, -11.75, 1.5, 0.5, -12.75, -1, 0.5, -12.75, 7, 0.5, -12.75, -6.5, 0.5, -12.75, -5, 0.5, -4.75, -3, 0.5, -6.25, -3, 0.5, -10.5, -8.5, 0.5, -10.5, -1.25, 0.5, 4, -2.5, 0.5, -2.25, -3.25, 0.5, -2.25, -1.25, 0.5, 4.75, -5, 0.5, -3.75, -499.5, 0.5, 5, 3.75, 0.5, -0.5, 2.75, 0.5, -0.75, 1.5, 0.5, 4.25, 4.25, 0.5, -1, 1.5, 0.5, 6.25, 0.25, 0.5, 6.5, 0.25, 0.5, 499.5, 9, 0.5, -10.5, 4.25, 0.5, -10.5, 4.25, 0.5, -2.75, 499.5, 0.5, 499.5, 1.5, 0.5, -10.5, -1, 0.5, -10.5, -1, 0.5, -5, -1, 0.5, -4, 2.25, 0.5, -2.75, 2.5, 0.5, -3.25, 3.75, 0.5, -3.25, -3, 2.5, -3.5, -2, 2.5, -4.25, -2.5, 2.5, -5, -3.75, 2.5, -4.5, -3.25, 0.5, -4.5, -3.25, 0.5, -4, -2.5, 0.5, -4.25, -2.75, 0.5, -4.75, 2, 0.5, -1.25, 1.25, 0.5, 3.75, -1.25, 0.5, 6.25, -499.5, 0.5, 499.5, -0.25, 2, 4.75, -0.25, 2, 5.5, 0.25, 2, 5.5, 0.25, 2, 4.75)
polygons = [PackedInt32Array(1, 0, 2), PackedInt32Array(2, 0, 3), PackedInt32Array(3, 0, 4), PackedInt32Array(0, 5, 4), PackedInt32Array(7, 6, 8), PackedInt32Array(8, 6, 9), PackedInt32Array(6, 1, 9), PackedInt32Array(9, 1, 10), PackedInt32Array(10, 1, 11), PackedInt32Array(11, 1, 2), PackedInt32Array(10, 11, 12), PackedInt32Array(12, 11, 14), PackedInt32Array(12, 14, 13), PackedInt32Array(13, 15, 12), PackedInt32Array(18, 17, 16), PackedInt32Array(18, 16, 19), PackedInt32Array(15, 13, 20), PackedInt32Array(20, 13, 21), PackedInt32Array(24, 23, 22), PackedInt32Array(24, 22, 25), PackedInt32Array(27, 26, 5), PackedInt32Array(5, 26, 4), PackedInt32Array(28, 31, 29), PackedInt32Array(29, 31, 30), PackedInt32Array(31, 7, 30), PackedInt32Array(30, 7, 8), PackedInt32Array(8, 32, 30), PackedInt32Array(31, 33, 7), PackedInt32Array(35, 34, 36), PackedInt32Array(36, 34, 37), PackedInt32Array(40, 39, 38), PackedInt32Array(42, 41, 37), PackedInt32Array(37, 41, 43), PackedInt32Array(37, 43, 26), PackedInt32Array(38, 41, 40), PackedInt32Array(40, 41, 42), PackedInt32Array(42, 37, 34), PackedInt32Array(26, 27, 37), PackedInt32Array(46, 45, 44), PackedInt32Array(44, 47, 46), PackedInt32Array(46, 47, 48), PackedInt32Array(50, 49, 48), PackedInt32Array(53, 52, 51), PackedInt32Array(47, 53, 51), PackedInt32Array(47, 51, 48), PackedInt32Array(48, 51, 21), PackedInt32Array(48, 21, 50), PackedInt32Array(50, 21, 54), PackedInt32Array(21, 51, 20), PackedInt32Array(29, 55, 28), PackedInt32Array(28, 55, 56), PackedInt32Array(35, 56, 57), PackedInt32Array(57, 56, 55), PackedInt32Array(60, 59, 58), PackedInt32Array(58, 57, 60), PackedInt32Array(60, 57, 61), PackedInt32Array(61, 57, 55), PackedInt32Array(61, 55, 52), PackedInt32Array(35, 36, 56), PackedInt32Array(61, 52, 53), PackedInt32Array(63, 62, 64), PackedInt32Array(64, 62, 65), PackedInt32Array(69, 68, 66), PackedInt32Array(66, 68, 67), PackedInt32Array(59, 70, 58), PackedInt32Array(58, 70, 39), PackedInt32Array(45, 71, 70), PackedInt32Array(70, 71, 38), PackedInt32Array(70, 38, 39), PackedInt32Array(45, 46, 71), PackedInt32Array(49, 50, 72), PackedInt32Array(72, 50, 73), PackedInt32Array(72, 73, 43), PackedInt32Array(43, 41, 72), PackedInt32Array(77, 76, 74), PackedInt32Array(74, 76, 75)]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bjhdm"]
albedo_texture = ExtResource("1_20tk5")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5w87i"]
albedo_texture = ExtResource("2_4g7fi")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cbfog"]
albedo_texture = ExtResource("3_5yguv")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x5gg2"]
albedo_texture = ExtResource("4_bbcvw")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_43gcj"]

[sub_resource type="Resource" id="Resource_buyd3"]
script = ExtResource("8_0iifm")
duration = 0.0
transition = 0
ease = 2

[sub_resource type="Resource" id="Resource_f3sqj"]
script = ExtResource("8_huh2v")
cull_mask = 1048575
h_offset = 0.0
v_offset = 0.0
projection = 0
fov = 75.0
size = 1.0
frustum_offset = Vector2(0, 0)
near = 0.05
far = 4000.0

[sub_resource type="BoxShape3D" id="BoxShape3D_lodn7"]
size = Vector3(1, 1, 0.692871)

[sub_resource type="Resource" id="Resource_26wg5"]
script = ExtResource("8_0iifm")
duration = 0.0
transition = 0
ease = 2

[sub_resource type="Resource" id="Resource_cm1f4"]
script = ExtResource("8_huh2v")
cull_mask = 1048575
h_offset = 0.0
v_offset = 0.0
projection = 0
fov = 75.0
size = 1.0
frustum_offset = Vector2(0, 0)
near = 0.05
far = 4000.0

[sub_resource type="Resource" id="Resource_rkkqr"]
script = ExtResource("8_0iifm")
duration = 0.0
transition = 0
ease = 2

[sub_resource type="Resource" id="Resource_esnmf"]
script = ExtResource("8_huh2v")
cull_mask = 1048575
h_offset = 0.0
v_offset = 0.0
projection = 0
fov = 75.0
size = 1.0
frustum_offset = Vector2(0, 0)
near = 0.05
far = 4000.0

[node name="World" type="Node3D"]

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_yeixw")
offset_right = 720.0
offset_bottom = 480.0

[node name="GameManager" type="Node" parent="SubViewportContainer"]
unique_name_in_owner = true
script = ExtResource("2_qftlj")

[node name="CanvasLayer" type="CanvasLayer" parent="SubViewportContainer/GameManager"]

[node name="PointCounter" type="Label" parent="SubViewportContainer/GameManager/CanvasLayer"]
offset_left = 500.0
offset_top = 10.0
offset_right = 711.0
offset_bottom = 67.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 41
text = "HOLYSHIIT"

[node name="KillStreakCounter" type="Label" parent="SubViewportContainer/GameManager/CanvasLayer"]
offset_left = 451.0
offset_top = 82.0
offset_right = 501.0
offset_bottom = 105.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
text = "Streak"

[node name="RichTextLabel" type="RichTextLabel" parent="SubViewportContainer/GameManager/CanvasLayer"]
offset_left = 547.0
offset_top = 237.0
offset_right = 587.0
offset_bottom = 277.0
text = "score"
scroll_active = false

[node name="FPSCounter" type="Label" parent="SubViewportContainer/GameManager/CanvasLayer"]
offset_left = 8.0
offset_top = 13.0
offset_right = 48.0
offset_bottom = 36.0

[node name="KillTimer" type="Timer" parent="SubViewportContainer/GameManager"]
wait_time = 0.8
one_shot = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(720, 480)
render_target_update_mode = 4

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
visible = false
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport"]
environment = SubResource("Environment_at28d")

[node name="Map" type="Node3D" parent="SubViewportContainer/SubViewport"]

[node name="NavRegion" type="NavigationRegion3D" parent="SubViewportContainer/SubViewport/Map"]
navigation_mesh = SubResource("NavigationMesh_cx1re")

[node name="Floor" type="CSGBox3D" parent="SubViewportContainer/SubViewport/Map/NavRegion"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
material_override = SubResource("StandardMaterial3D_bjhdm")
use_collision = true
size = Vector3(1000, 1, 1000)

[node name="CSGBox3D" type="CSGBox3D" parent="SubViewportContainer/SubViewport/Map/NavRegion"]
transform = Transform3D(0.827835, 0, -0.560971, 0, 1, 0, 0.560971, 0, 0.827835, 3.22087, 0.5, -1.93914)
material_override = SubResource("StandardMaterial3D_5w87i")
use_collision = true

[node name="CSGBox3D2" type="CSGBox3D" parent="SubViewportContainer/SubViewport/Map/NavRegion"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 5.02424)
material_override = SubResource("StandardMaterial3D_cbfog")
use_collision = true
size = Vector3(1.5, 1.5, 1.5)

[node name="CSGBox3D3" type="CSGBox3D" parent="SubViewportContainer/SubViewport/Map/NavRegion"]
transform = Transform3D(0.773298, 0, -0.634042, 0, 1, 0, 0.634042, 0, 0.773298, -2.92376, 1, -4.31777)
material_override = SubResource("StandardMaterial3D_x5gg2")
material_overlay = SubResource("ShaderMaterial_43gcj")
use_collision = true
size = Vector3(2, 2, 2)

[node name="CSGBox3D4" type="CSGBox3D" parent="SubViewportContainer/SubViewport/Map/NavRegion"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.76187, 5.09375, -11.7266)
use_collision = true
size = Vector3(6.68, 10.1875, 1)

[node name="CSGBox3D5" type="CSGBox3D" parent="SubViewportContainer/SubViewport/Map/NavRegion"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.17803, 4.94019, -11.6144)
use_collision = true
size = Vector3(6.68, 9.88037, 1)

[node name="CSGBox3D6" type="CSGBox3D" parent="SubViewportContainer/SubViewport/Map/NavRegion"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -7.63847, 5.06989, -17.4041)
use_collision = true
size = Vector3(12.3794, 10.1398, 1)

[node name="CSGBox3D7" type="CSGBox3D" parent="SubViewportContainer/SubViewport/Map/NavRegion"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 8.02714, 4.88812, -18.066)
use_collision = true
size = Vector3(12.3794, 9.77625, 1)

[node name="Cameras" type="Node" parent="SubViewportContainer/SubViewport"]

[node name="PhantomCamera3D2" type="Node3D" parent="SubViewportContainer/SubViewport/Cameras"]
transform = Transform3D(0.975295, 0.112333, -0.190212, -0.0720221, 0.975701, 0.20693, 0.208836, -0.188119, 0.959687, 0, 1.49999, 2.73658)
script = ExtResource("6_m5yp5")
priority = 1
tween_resource = SubResource("Resource_buyd3")
tween_on_load = false
camera_3d_resource = SubResource("Resource_f3sqj")

[node name="Area3D2" type="Area3D" parent="SubViewportContainer/SubViewport/Cameras" node_paths=PackedStringArray("area_pcam")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5.74454)
priority = 5
script = ExtResource("10_3ba0x")
area_pcam = NodePath("../PhantomCamera3D2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Cameras/Area3D2"]
transform = Transform3D(10.115, 0, 0, 0, 0.725, 0, 0, 0, 9.98, 0, 0.5, -9.94983)
shape = SubResource("BoxShape3D_lodn7")

[node name="PhantomCamera3D" type="Node3D" parent="SubViewportContainer/SubViewport/Cameras"]
transform = Transform3D(-0.983751, 0.0912959, -0.15459, -5.21541e-08, 0.861056, 0.50851, 0.179536, 0.500248, -0.847065, -2.38419e-07, 1.49999, -17.0578)
script = ExtResource("6_m5yp5")
tween_resource = SubResource("Resource_26wg5")
camera_3d_resource = SubResource("Resource_cm1f4")

[node name="Area3D" type="Area3D" parent="SubViewportContainer/SubViewport/Cameras" node_paths=PackedStringArray("area_pcam")]
priority = 5
script = ExtResource("10_3ba0x")
area_pcam = NodePath("../PhantomCamera3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Cameras/Area3D"]
transform = Transform3D(10.16, 0, 0, 0, 0.5, 0, 0, 0, 10, 0, 0.5, -11.4855)
shape = SubResource("BoxShape3D_lodn7")

[node name="PhantomCamera3D3" type="Node3D" parent="SubViewportContainer/SubViewport/Cameras" node_paths=PackedStringArray("look_at_target")]
transform = Transform3D(-0.9481, -0.0446096, 0.314828, -1.86265e-09, 0.99011, 0.140294, -0.317973, 0.133013, -0.938725, 6.33634, 2.82361, -18.8931)
script = ExtResource("6_m5yp5")
look_at_mode = 2
look_at_target = NodePath("../../boar-man-char")
tween_resource = SubResource("Resource_rkkqr")
tween_on_load = false
camera_3d_resource = SubResource("Resource_esnmf")

[node name="Area3D3" type="Area3D" parent="SubViewportContainer/SubViewport/Cameras" node_paths=PackedStringArray("area_pcam")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -9.57267)
priority = 5
script = ExtResource("10_3ba0x")
area_pcam = NodePath("../PhantomCamera3D3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Cameras/Area3D3"]
transform = Transform3D(10, 0, 0, 0, 0.5, 0, 0, 0, 10, 0, 0.5, -9.94983)
shape = SubResource("BoxShape3D_lodn7")

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport/Cameras"]
transform = Transform3D(0.975295, 0.112333, -0.190212, -0.0720221, 0.975701, 0.20693, 0.208836, -0.188119, 0.959687, 0, 1.49999, 2.73658)

[node name="PhantomCameraHost" type="Node" parent="SubViewportContainer/SubViewport/Cameras/Camera3D"]
script = ExtResource("9_5lj70")

[node name="boar-man-char" parent="SubViewportContainer/SubViewport" instance=ExtResource("12_7522c")]

[node name="victim" parent="SubViewportContainer/SubViewport" instance=ExtResource("13_dyovg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -5.68125)

[connection signal="timeout" from="SubViewportContainer/GameManager/KillTimer" to="SubViewportContainer/GameManager" method="_on_kill_timer_timeout"]
